<resources>
    <string name="app_name">C196</string>
    <string name="channel_name">date_channel</string>
    <string name="channel_description">C196 app</string>
    <string name="assessment_detail">Assessment Detail</string>
    <string name="e_g_software_2">e.g., Software 2</string>
    <string name="enter_date">Enter Date</string>
    <string name="title">Title:</string>
    <string name="due_date">Due Date:</string>
    <string name="goal_date">Goal Date</string>
    <string name="course">Course:</string>
    <string name="type_of_assessment">Type Of Assessment</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="objective">Objective</string>
    <string name="performance">Performance</string>
    <string name="add_a_note">Add a Note</string>
    <string name="save_note">Save Note</string>
    <string name="view_course_notes">View Course Notes</string>
    <string name="optional_alerts">Optional Alerts</string>
    <string name="due_date_alert">Due Date Alert</string>
    <string name="goal_date_alert">Goal Date Alert</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="save_assessment">Save Assessment</string>
    <string name="course_detail">Course Detail</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="status">Status:</string>
    <string name="e_g_in_progress">e.g., In Progress</string>
    <string name="term">Term:</string>
    <string name="view_course_assessments">View Course Assessments</string>
    <string name="optional_mentor">Optional Mentor</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone">Phone:</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter Email</string>
    <string name="save_mentor">Save Mentor</string>
    <string name="view_course_mentors">View Course Mentors</string>
    <string name="start_date_alert">Start Date Alert</string>
    <string name="end_date_alert">End Date Alert</string>
    <string name="delete_course">Delete Course</string>
    <string name="save_course">Save Course</string>
    <string name="terms">TERMS</string>
    <string name="courses">COURSES</string>
    <string name="assessments">ASSESSMENTS</string>
    <string name="chuckknappc196project_v_1">ChuckKnappC196Project v.1</string>
    <string name="click_note_to_share">Click Note to Share</string>
    <string name="term_detail">Term Detail</string>
    <string name="e_g_spring_term">e.g., Spring Term</string>
    <string name="delete_term">Delete Term</string>
    <string name="view_term_courses">View Term Courses</string>
    <string name="save_term">Save Term</string>
    <string name="mentor_detail">Mentor Detail</string>
    <string name="delete_mentor">Delete Mentor</string>
    <string name="note_detail">Note Detail</string>
    <string name="note">Note:</string>
    <string name="delete_note">Delete Note</string>
    <string name="share_note">Share Note</string>
</resources>