<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CourseDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:paddingTop="30dp"
                android:paddingBottom="50dp"
                android:text="@string/course_detail"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/title"
                style="@style/main_textview_style"/>

            <EditText
                android:id="@+id/title"
                android:layout_row="1"
                android:layout_column="1"
                android:hint="@string/e_g_software_2"
                style="@style/main_edittext_style" />

            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/start_date"
                style="@style/main_textview_style"/>

            <EditText
                android:id="@+id/startDate"
                android:layout_row="2"
                android:layout_column="1"
                android:hint="@string/enter_date"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />

            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/end_date"
                style="@style/main_textview_style" />

            <EditText
                android:id="@+id/endDate"
                android:layout_row="3"
                android:layout_column="1"
                android:hint="@string/enter_date"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />

            <TextView
                android:layout_row="4"
                android:layout_column="0"
                android:text="@string/status"
                style="@style/main_textview_style" />

            <EditText
                android:id="@+id/status"
                android:layout_row="4"
                android:layout_column="1"
                android:hint="@string/e_g_in_progress"
                style="@style/main_edittext_style" />

            <TextView
                android:layout_row="5"
                android:layout_column="0"
                android:text="@string/term"
                style="@style/main_textview_style" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_row="5"
                android:layout_column="1" />

            <Button
                android:id="@+id/viewAssessmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/view_course_assessments" />

            <TextView
                android:id="@+id/mentorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="7"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_marginBottom="30dp"
                android:paddingTop="40dp"
                android:text="@string/optional_mentor"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mentorNameLabel"
                style="@style/main_textview_style"
                android:layout_row="8"
                android:layout_column="0"
                android:text="@string/name" />

            <EditText
                android:id="@+id/mentorName"
                android:layout_row="8"
                android:layout_column="1"
                android:hint="@string/enter_name"
                style="@style/main_edittext_style" />

            <TextView
                android:id="@+id/mentorPhoneLabel"
                style="@style/main_textview_style"
                android:layout_row="9"
                android:layout_column="0"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/mentorPhone"
                android:layout_row="9"
                android:layout_column="1"
                android:hint="@string/enter_phone"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/mentorEmailLabel"
                style="@style/main_textview_style"
                android:layout_row="10"
                android:layout_column="0"
                android:text="@string/email" />

            <EditText
                android:id="@+id/mentorEmail"
                android:layout_row="10"
                android:layout_column="1"
                android:hint="@string/enter_email"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />
        </GridLayout>

        <Button
            android:id="@+id/saveMentorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/save_mentor"/>

        <Button
            android:id="@+id/viewMentorsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/view_course_mentors"/>

        <EditText
            android:id="@+id/addNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/add_a_note"/>

        <Button
            android:id="@+id/saveNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/save_note"/>

        <Button
            android:id="@+id/viewNotesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/view_course_notes"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:paddingTop="50dp"
                android:text="@string/optional_alerts"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginRight="40dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:text="@string/start_date_alert"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/startDateCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/end_date_alert"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/endDateCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="right" />

        </GridLayout>

        <Button
            android:id="@+id/editCourseButton"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes" />

        <Button
            android:id="@+id/deleteCourseButton"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_course" />

        <Button
            android:id="@+id/saveCourseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/save_course"/>

    </LinearLayout>

</ScrollView>