<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TermDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:paddingTop="30dp"
                android:paddingBottom="50dp"
                android:text="@string/term_detail"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/title"
                style="@style/main_textview_style" />

            <EditText
                android:id="@+id/title"
                android:layout_row="1"
                android:layout_column="1"
                android:hint="@string/e_g_spring_term"
                style="@style/main_edittext_style" />

            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/start_date"
                style="@style/main_textview_style"/>

            <EditText
                android:id="@+id/startDate"
                android:layout_row="2"
                android:layout_column="1"
                android:hint="@string/enter_date"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />

            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/enter_date"
                style="@style/main_textview_style" />

            <EditText
                android:id="@+id/endDate"
                android:layout_row="3"
                android:layout_column="1"
                android:hint="@string/end_date"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />

        </GridLayout>

        <Button
            android:id="@+id/editTermButton"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes" />

        <Button
            android:id="@+id/deleteTermButton"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_term" />

        <Button
            android:id="@+id/viewTermCourses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/view_term_courses" />

        <Button
            android:id="@+id/saveTermButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="300dp"
            android:text="@string/save_term"/>

    </LinearLayout>
</ScrollView>