<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MentorDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:paddingTop="30dp"
                android:paddingBottom="50dp"
                android:text="@string/mentor_detail"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/name"
                style="@style/main_textview_style" />

            <EditText
                android:id="@+id/mentorName"
                android:layout_row="1"
                android:layout_column="1"
                android:hint="@string/enter_name"
                style="@style/main_edittext_style" />

            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/phone"
                style="@style/main_textview_style"/>

            <EditText
                android:id="@+id/mentorPhone"
                android:layout_row="2"
                android:layout_column="1"
                android:hint="@string/enter_phone"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />

            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/enter_email"
                style="@style/main_textview_style" />

            <EditText
                android:id="@+id/mentorEmail"
                android:layout_row="3"
                android:layout_column="1"
                android:hint="@string/enter_email"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />

        </GridLayout>

        <Button
            android:id="@+id/editMentorButton"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes" />

        <Button
            android:id="@+id/deleteMentorButton"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_mentor" />

    </LinearLayout>

</ScrollView>