<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AssessmentDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:paddingTop="30dp"
                android:paddingBottom="50dp"
                android:text="@string/assessment_detail"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/title"
                android:layout_row="1"
                android:layout_column="1"
                android:hint="@string/e_g_software_2"
                style="@style/main_edittext_style" />

            <EditText
                android:id="@+id/dueDate"
                android:layout_row="2"
                android:layout_column="1"
                android:hint="@string/enter_date"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/goalDate"
                android:layout_row="3"
                android:layout_column="1"
                android:hint="@string/enter_date"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                style="@style/main_edittext_style"
                tools:ignore="TextFields" />

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/title"
                style="@style/main_textview_style" />

            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/due_date"
                style="@style/main_textview_style" />

            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/goal_date"
                style="@style/main_textview_style" />

            <TextView
                android:layout_row="4"
                android:layout_column="0"
                android:text="@string/course"
                style="@style/main_textview_style" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:paddingTop="50dp"
                android:text="@string/type_of_assessment"
                android:textAlignment="center"
                android:textSize="20sp" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="12">

            <Switch
                android:id="@+id/typeSwitch"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:textOff="@string/off"
                android:textOn="@string/on"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/objective"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:paddingRight="10dp"
                android:layout_gravity="right"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/performance"
                android:textSize="20sp" />

        </GridLayout>

<!--        <EditText-->
<!--            android:id="@+id/addNote"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:hint="@string/add_a_note"/>-->

<!--        <Button-->
<!--            android:id="@+id/saveNoteButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/save_note"/>-->

<!--        <Button-->
<!--            android:id="@+id/viewNotesButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/view_course_notes"/>-->



        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:paddingTop="50dp"
                android:text="@string/optional_alerts"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginRight="50dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/due_date_alert"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/dueDateCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/goal_date_alert"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/goalDateCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="right" />

        </GridLayout>

        <Button
            android:id="@+id/editAssessmentButton"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes" />

        <Button
            android:id="@+id/deleteAssessmentButton"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_assessment" />

        <Button
            android:id="@+id/saveAssessmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/save_assessment"/>
    </LinearLayout>

</ScrollView>