<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.NoteDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:paddingTop="30dp"
                android:paddingBottom="50dp"
                android:text="@string/note_detail"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/note"
                style="@style/main_textview_style" />

            <EditText
                android:id="@+id/note"
                android:layout_row="1"
                android:layout_column="1"
                style="@style/main_edittext_style" />

        </GridLayout>

        <Button
            android:id="@+id/shareNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/share_note" />

        <Button
            android:id="@+id/editNoteButton"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes" />

        <Button
            android:id="@+id/deleteNoteButton"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_note" />

    </LinearLayout>

</ScrollView>